--- a/storage-backend/src/main/resources/application.yml
+++ b/storage-backend/src/main/resources/application.yml
@@ -1,1 +1,33 @@
-spring.application.name=storage-backend
+server:
+  port: 8080
+
+spring:
+  application:
+    name: storage-backend
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/storage?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 12345
+
+  data:
+    redis:
+      host: 172.27.212.63
+      port: 6379
+      database: 0
+      timeout: 3000
+
+minio:
+  endpoint: http://127.0.0.1:9000
+  access-key: minioadmin
+  secret-key: minioadmin
+  secure: false
+  bucket:
+    core: enterprise-cloud-storage
+    temp: enterprise-temp-storage
+    backup: enterprise-backup-storage
+
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
