chore(backend): 更新配置文件
- application.yml新增logback配置

--- a/storage-backend/src/main/resources/application.yml
+++ b/storage-backend/src/main/resources/application.yml
@@ -4,19 +4,33 @@ server:
 spring:
   application:
     name: storage-backend
-
   datasource:
     url: jdbc:mysql://localhost:3306/storage?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 12345
-
   data:
     redis:
       host: 172.27.212.63
       port: 6379
       database: 0
       timeout: 3000
+
+logging:
+  level:
+    root: info
+    org.example.storagebackend: debug
+    org.springframework: warn
+  file:
+    name: ./logs/app.log
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg%n"
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      total-size-cap: 10GB
+      max-history: 30
 
 minio:
   endpoint: http://127.0.0.1:9000
